--- a/Makefile.Linux
+++ b/Makefile.Linux
@@ -4,13 +4,13 @@
 
 INCLUDE = \
 	-I$(KEYSPACE_DIR)/src \
-	-I/usr/include/db4.5 
+	-I$(PREFIX)/include
 
 LDPATH = \
 
 BASE_CFLAGS = -Wall -fPIC $(INCLUDE) -DPLATFORM_$(PLATFORM_UCASE) -D__STDC_FORMAT_MACROS
 BASE_CXXFLAGS = $(BASE_CFLAGS)
-BASE_LDFLAGS = -lpthread -ldb_cxx -lrt $(LDPATH)
+BASE_LDFLAGS = -L$(PREFIX)/lib -lpthread -ldb_cxx -lrt $(LDPATH)
 SOLINK = -shared -fPIC -Wl,-soname,$(SONAME)
 SOEXT = so
 SWIG_LDFLAGS = -shared -fPIC 
